[gd_scene load_steps=46 format=3 uid="uid://jdtjknljlkyl"]

[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/Necromancer.gd" id="1_0o0sf"]
[ext_resource type="Texture2D" uid="uid://bpg5pfom4x8ck" path="res://Imported Assets/Enemies/Necromancer_creativekind-Sheet.png" id="1_y6d11"]
[ext_resource type="PackedScene" uid="uid://b0odo6b6genc4" path="res://Scenes/Entities/Necromancer/necromancer_minion.tscn" id="2_7vrej"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/State/NecromancerStateMachine.gd" id="2_myrnh"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/State/NecromancerIdleState.gd" id="3_rmrdp"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/State/NecromancerAttackState.gd" id="5_r3ybu"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/State/NecromancerDeathState.gd" id="6_g4uxd"]
[ext_resource type="Script" path="res://Scripts/Enemy/Necromancer/State/NecromancerHurtState.gd" id="7_1kg7s"]
[ext_resource type="PackedScene" uid="uid://4japi0h1i07l" path="res://Scenes/UI/state_debug_label.tscn" id="8_k4c50"]
[ext_resource type="Script" path="res://Scripts/Damageable.gd" id="9_lkbbl"]
[ext_resource type="PackedScene" uid="uid://bofroqok6kh13" path="res://Scenes/DebugScenes/health_debug_label.tscn" id="10_gh1d4"]
[ext_resource type="Script" path="res://Scenes/Entities/Necromancer/NecromancerMinionSpawnState/NecromancerMinionSpawnStateMachine.gd" id="12_efna7"]
[ext_resource type="Script" path="res://Scenes/Entities/Necromancer/NecromancerMinionSpawnState/SpawningMinionsState.gd" id="13_pn67p"]
[ext_resource type="Script" path="res://Scenes/Entities/Necromancer/NecromancerMinionSpawnState/RechargeState.gd" id="14_tsbdf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tsk4"]
size = Vector2(107, 136)

[sub_resource type="Animation" id="Animation_o2evh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_30k88"]
resource_name = "cast_major"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(12, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ujmm1"]
resource_name = "cast_minor"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3), Vector2i(10, 3), Vector2i(11, 3), Vector2i(12, 3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vfu65"]
resource_name = "cast_skull"
length = 1.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(10, 4), Vector2i(11, 4), Vector2i(12, 4), Vector2i(13, 4), Vector2i(14, 4), Vector2i(15, 4), Vector2i(16, 4)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_4stqa"]
resource_name = "death"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6), Vector2i(8, 6)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bnjgr"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_gd760"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_23dbv"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y6d11")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame_coords")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1h1xj"]
_data = {
"RESET": SubResource("Animation_o2evh"),
"cast_major": SubResource("Animation_30k88"),
"cast_minor": SubResource("Animation_ujmm1"),
"cast_skull": SubResource("Animation_vfu65"),
"death": SubResource("Animation_4stqa"),
"hurt": SubResource("Animation_bnjgr"),
"idle": SubResource("Animation_gd760"),
"move": SubResource("Animation_23dbv")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_otsf3"]
animation = &"cast_major"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0miqn"]
animation = &"cast_minor"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kti8u"]
animation = &"cast_skull"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gpy7k"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mbqng"]
animation = &"hurt"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sh3o1"]
animation = &"move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0ddhj"]
animation = &"move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bmq0r"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_yomhm"]
blend_point_0/node = SubResource("AnimationNodeAnimation_sh3o1")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_0ddhj")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_bmq0r")
blend_point_2/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q4lxh"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ry7rm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ahgjg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_klfol"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hj6dl"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pwfq0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4lpsy"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yludv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0b6ct"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ljffm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y6h5s"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_sfyum"]
states/cast_major/node = SubResource("AnimationNodeAnimation_otsf3")
states/cast_major/position = Vector2(360.5, 238.5)
states/cast_minor/node = SubResource("AnimationNodeAnimation_0miqn")
states/cast_minor/position = Vector2(183.5, 237)
states/cast_skull/node = SubResource("AnimationNodeAnimation_kti8u")
states/cast_skull/position = Vector2(550, 216.75)
states/death/node = SubResource("AnimationNodeAnimation_gpy7k")
states/death/position = Vector2(709.757, 163.488)
states/hurt/node = SubResource("AnimationNodeAnimation_mbqng")
states/hurt/position = Vector2(573, 100.25)
states/idle/node = SubResource("AnimationNodeBlendSpace1D_yomhm")
states/idle/position = Vector2(339, 100.125)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_q4lxh"), "idle", "cast_minor", SubResource("AnimationNodeStateMachineTransition_ry7rm"), "idle", "cast_major", SubResource("AnimationNodeStateMachineTransition_ahgjg"), "idle", "cast_skull", SubResource("AnimationNodeStateMachineTransition_klfol"), "cast_minor", "idle", SubResource("AnimationNodeStateMachineTransition_hj6dl"), "cast_skull", "idle", SubResource("AnimationNodeStateMachineTransition_pwfq0"), "cast_major", "idle", SubResource("AnimationNodeStateMachineTransition_4lpsy"), "idle", "hurt", SubResource("AnimationNodeStateMachineTransition_yludv"), "hurt", "idle", SubResource("AnimationNodeStateMachineTransition_0b6ct"), "idle", "death", SubResource("AnimationNodeStateMachineTransition_ljffm"), "death", "End", SubResource("AnimationNodeStateMachineTransition_y6h5s")]
graph_offset = Vector2(261.757, 36.9875)

[node name="Necromancer" type="CharacterBody2D"]
position = Vector2(380, 339)
collision_layer = 4
script = ExtResource("1_0o0sf")
necromancer_minion = ExtResource("2_7vrej")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_3tsk4")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -83)
scale = Vector2(3, 3)
texture = ExtResource("1_y6d11")
hframes = 17
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1h1xj")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_sfyum")
anim_player = NodePath("../AnimationPlayer")
parameters/idle/blend_position = -0.000269055

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "animation_tree")]
script = ExtResource("2_myrnh")
character = NodePath("..")
current_state = NodePath("NecromancerIdleState")
animation_tree = NodePath("../AnimationTree")

[node name="NecromancerIdleState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("attack_state", "death_state", "hurt_state", "damageable_node")]
script = ExtResource("3_rmrdp")
idle_animation = "idle"
attack_state = NodePath("../NecromancerAttackState")
death_state = NodePath("../NecromancerDeathState")
hurt_state = NodePath("../NecromancerHurtState")
damageable_node = NodePath("../../Damageable")
can_fall = false

[node name="AttackDelayTimer" type="Timer" parent="CharacterStateMachine/NecromancerIdleState"]
autostart = true

[node name="NecromancerAttackState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("5_r3ybu")
minor_spell_animation = "cast_minor"
skull_spell_animation = "cast_skull"
major_spell_animation = "cast_major"
idle_state = NodePath("../NecromancerIdleState")
can_move = false
can_change_direction = false
can_fall = false

[node name="MinorSpellTimer" type="Timer" parent="CharacterStateMachine/NecromancerAttackState"]
wait_time = 0.06

[node name="NecromancerDeathState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("necromancer_collision")]
script = ExtResource("6_g4uxd")
death_animation = "death"
necromancer_collision = NodePath("../../CollisionShape2D")
can_move = false
can_change_direction = false
can_fall = false

[node name="NecromancerHurtState" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("7_1kg7s")
hurt_animation = "hurt"
idle_state = NodePath("../NecromancerIdleState")
can_move = false
can_change_direction = false
can_fall = false

[node name="StateDebugLabel" parent="." node_paths=PackedStringArray("state_machine") instance=ExtResource("8_k4c50")]
offset_left = -81.0
offset_top = -127.0
offset_right = -32.0
offset_bottom = -101.0
state_machine = NodePath("../NecromancerMinionSpawnStateMachine")
metadata/_edit_use_anchors_ = true

[node name="Damageable" type="Node" parent="."]
script = ExtResource("9_lkbbl")
health = 200.0
await_death_animation = true

[node name="HealthDebugLabel" parent="." node_paths=PackedStringArray("player_damageable_node") instance=ExtResource("10_gh1d4")]
offset_left = -92.0
offset_top = -108.0
offset_right = -32.0
offset_bottom = -82.0
player_damageable_node = NodePath("../Damageable")
metadata/_edit_use_anchors_ = true

[node name="NecromancerMinionSpawnStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "current_state", "animation_tree")]
script = ExtResource("12_efna7")
character = NodePath("..")
current_state = NodePath("SpawningMinionsState")
animation_tree = NodePath("../AnimationTree")

[node name="SpawningMinionsState" type="Node" parent="NecromancerMinionSpawnStateMachine" node_paths=PackedStringArray("necromancer_collision_box", "recharge_state")]
script = ExtResource("13_pn67p")
necromancer_collision_box = NodePath("../../CollisionShape2D")
recharge_state = NodePath("../RechargeState")

[node name="SpawnInterval" type="Timer" parent="NecromancerMinionSpawnStateMachine/SpawningMinionsState"]
wait_time = 0.75

[node name="RechargeState" type="Node" parent="NecromancerMinionSpawnStateMachine" node_paths=PackedStringArray("spawn_state")]
script = ExtResource("14_tsbdf")
spawn_state = NodePath("../SpawningMinionsState")

[node name="RechargeInterval" type="Timer" parent="NecromancerMinionSpawnStateMachine/RechargeState"]
wait_time = 4.0

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/NecromancerAttackState" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/NecromancerDeathState" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/NecromancerHurtState" method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="CharacterStateMachine/NecromancerIdleState/AttackDelayTimer" to="CharacterStateMachine/NecromancerIdleState" method="_on_vulnerable_timer_timeout"]
[connection signal="timeout" from="NecromancerMinionSpawnStateMachine/SpawningMinionsState/SpawnInterval" to="NecromancerMinionSpawnStateMachine/SpawningMinionsState" method="_on_spawn_interval_timeout"]
[connection signal="timeout" from="NecromancerMinionSpawnStateMachine/RechargeState/RechargeInterval" to="NecromancerMinionSpawnStateMachine/RechargeState" method="_on_recharge_interval_timeout"]
